resolve issues that shown in sonarqube